# Forge

./: .gitignore  CMakeLists.txt
.forge/: forge.toml
.history/forge/src/: forge_schema_20260127182905.rs  forge_schema_20260127183355.rs  forge_schema_20260127183356.rs  forge_schema_20260127183357.rs  forge_schema_20260127183401.rs  forge_schema_20260127183402.rs  forge_schema_20260127183405.rs  forge_schema_20260127183406.rs  forge_schema_20260127183407.rs  forge_schema_20260127183409.rs  forge_schema_20260127183410.rs  forge_schema_20260127183411.rs  forge_schema_20260127183412.rs  forge_schema_20260127183413.rs  forge_schema_20260127183418.rs  forge_schema_20260127183421.rs  forge_schema_20260127183422.rs  forge_schema_20260127183423.rs  forge_schema_20260127183437.rs  forge_schema_20260127183439.rs  forge_schema_20260127183440.rs  forge_schema_20260127183449.rs  forge_schema_20260127183458.rs
app/: CMakeLists.txt  app.cpp  main.cpp
app/cmake/: cmake_deps.cpp  cmake_deps.h
app/commands/: add.cpp  add.h  init.cpp  init.h
app/registry/: package_index.h
core/: CMakeLists.txt
core/include/Forge/: abi.h  lock.h  metadata.h  package.h  project.h  toml.h
core/include/Forge/misc/: timestamp.h
core/include/Forge/schema/: abi.h  error.h  lock.h  manifest.h  metadata.h  package.h  project.h  toml.h
core/include/Forge/serialiser/: abi_serialiser.h  deserialise_array.h  get_field.h  manifest_serialiser.h  metadata_serialiser.h  package_serialiser.h  project_serialiser.h  serialise.h
core/src/misc/: timestamp.cpp
core/src/serialiser/: abi_serialiser.cpp  manifest_serialiser.cpp  metadata_serialiser.cpp  package_serialiser.cpp  project_serialiser.cpp  serialise.cpp
core/tests/: CMakeLists.txt
core/tests/serialiser/: abi_serialiser_test.cpp  lock_serialiser_test.cpp  metadata_serialiser_test.cpp  package_serialiser_test.cpp  project_serialiser_test.cpp  toml_serialiser_test.cpp
forge/: Cargo.toml
forge/src/: forge_schema.rs  lib.rs  main.rs
forge/src/abi/: detector.rs  error.rs  extractor.rs  hasher.rs  mod.rs  types.rs
forge/src/cli/: add.rs  init.rs  mod.rs  run.rs  sync.rs
forge/src/forge_schema/: lock.rs  mod.rs  toml.rs
